@@ -5,7 +5,7 @@
 
 	<groupId>com.telestax.servlet</groupId>
 	<artifactId>restcomm</artifactId>
-	<version>7.3.1-SNAPSHOT</version>
+	<version>7.4.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>RestComm</name>
 	<description>A unified communications platform for web developers.</description>
@@ -86,8 +86,7 @@
 		<mobicents.mgcp.impl.version>3.0.2.FINAL</mobicents.mgcp.impl.version>
 		<javamail.version>1.4</javamail.version>
 		<servletapi.version>2.5</servletapi.version>
-		<!-- <sipservletapi.version>7.0.0.GA-TelScale</sipservletapi.version> -->
-		<sipservletapi.version>3.1.620</sipservletapi.version>
+		<sipservletapi.version>3.1.631</sipservletapi.version>
 		<staxapi.version>1.0.1</staxapi.version>
 		<staximpl.version>1.2.0</staximpl.version>
 		<servlet-api.version>7.0.50</servlet-api.version>
@@ -95,7 +94,7 @@
 		<shiroweb.version>1.2.0</shiroweb.version>
 		<jersey.version>1.13</jersey.version>
 		<httpclient.version>4.2.5</httpclient.version>
-		<gson.version>2.1</gson.version>
+		<gson.version>2.3.1</gson.version>
 		<xstream.version>1.4.2</xstream.version>
 		<mongodb.version>2.7.2</mongodb.version>
 		<mybatis.version>3.2.2</mybatis.version>
@@ -104,15 +103,14 @@
 		<junit.version>4.10</junit.version>
 		<scalatest.version>1.9.1</scalatest.version>
 		<hsqldb.version>2.3.2</hsqldb.version>
-		<!-- <sip-ri.version>1.2.167</sip-ri.version> -->
-		<sip-ri.version>1.2.233</sip-ri.version>
+		<sip-ri.version>1.2.241</sip-ri.version>
 		<arquillian.version>1.0.3.Final</arquillian.version>
-		<mss.arquillian.version>1.0.0-CR1</mss.arquillian.version>
-		<mss.shrinkwrap.version>1.0.0-CR1</mss.shrinkwrap.version>
+		<mss.arquillian.version>1.0.1</mss.arquillian.version>
+		<mss.shrinkwrap.version>1.0.1</mss.shrinkwrap.version>
 		<shrinkwrap.resolver.version>2.0.0-alpha-4</shrinkwrap.resolver.version>
-		<sipunit.version>2.0.0</sipunit.version>
+		<sipunit.version>2.0.1</sipunit.version>
 		<!--tomcat.version>6.0.35</tomcat.version -->
-		<tomcat7.version>7.0.50</tomcat7.version>
+		<tomcat7.version>7.0.64</tomcat7.version>
 		<mobicents.checkstyle.version>1.0.0.FINAL</mobicents.checkstyle.version>
 		<checkstyle.plugin.version>2.9.1</checkstyle.plugin.version>
 		<mgcpunit.version>1.0.0-ALPHA2</mgcpunit.version>
@@ -138,7 +136,7 @@
 		<module>restcomm.provisioning.number.api</module>
 		<module>restcomm.provisioning.number.vi</module>
 		<module>restcomm.provisioning.number.nexmo</module>
-        	<module>restcomm.provisioning.number.bandwidth</module>
+		<module>restcomm.provisioning.number.bandwidth</module>
 		<module>restcomm.provisioning.number.voxbone</module>
 		<module>restcomm.telephony</module>
 		<module>restcomm.tts.api</module>
@@ -149,6 +147,9 @@
 		<module>restcomm.tts.att</module>
 		<module>restcomm.ussd</module>
 		<module>restcomm.routing</module>
+		<module>restcomm.email</module>
+		<module>restcomm.email.api</module>
+
 	</modules>
 
 	<dependencyManagement>
@@ -248,7 +249,7 @@
 				<scope>provided</scope>
 			</dependency>
 
-			<!--dependency> <groupId>org.apache.tomcat</groupId> <artifactId>servlet-api</artifactId> 
+			<!--dependency> <groupId>org.apache.tomcat</groupId> <artifactId>servlet-api</artifactId>
 				<version>${servlet-api.version}</version> </dependency -->
 
 			<dependency>
@@ -436,7 +437,7 @@
 			</dependency>
 
 			<dependency>
-				<groupId>org.cafesip.sipunit</groupId>
+				<groupId>org.mobicents.sipunit</groupId>
 				<artifactId>sipunit</artifactId>
 				<version>${sipunit.version}</version>
 				<scope>test</scope>
@@ -561,7 +562,7 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.cafesip.sipunit</groupId>
+			<groupId>org.mobicents.sipunit</groupId>
 			<artifactId>sipunit</artifactId>
 			<version>${sipunit.version}</version>
 			<scope>test</scope>
@@ -572,7 +573,7 @@
 			<version>${mobicents.checkstyle.version}</version>
 		</dependency>
 
-		<!--dependency> <groupId>att</groupId> <artifactId>naturalvoices</artifactId> 
+		<!--dependency> <groupId>att</groupId> <artifactId>naturalvoices</artifactId>
 			<version>5.1</version> </dependency -->
 	</dependencies>
 
@@ -597,6 +598,21 @@
 					<useProjectReferences>true</useProjectReferences>
 				</configuration>
 			</plugin>
+			<!-- When testing maven sure fire spawns a new JVM. Setting it to never fixed the issue. -->
+			<!--
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.18.1</version>
+				<configuration>
+					<forkMode>never</forkMode>
+					<argLine>-Xms1024m -Xmx1024m -XX:MaxPermSize=2048m</argLine>
+					<systemPropertyVariables>
+						<user.name>${user.name}</user.name>
+					</systemPropertyVariables>
+				</configuration>
+			</plugin>
+			-->
 			<!-- Checkstyle -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -770,7 +786,7 @@
 		</repository>
 
 		<!-- Local repository for the ATT TTS Java wrapper library -->
-		<!-- <repository> <id>project</id> <url>file:///${basedir}/restcomm.tts.att/lib</url> 
+		<!-- <repository> <id>project</id> <url>file:///${basedir}/restcomm.tts.att/lib</url>
 			</repository> -->
 	</repositories>
 
